add  note about switch elasticsearch aliases

--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "minute-cherry",
+   "id": "romantic-vulnerability",
    "metadata": {},
    "source": [
     "# Wikifier Docker Runbook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "illegal-soccer",
+   "id": "valid-motor",
    "metadata": {},
    "source": [
     "## Setup Elasticsearch cluster on machines wikibase02, wikibase03 and wikibase04"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "urban-generic",
+   "id": "contrary-november",
    "metadata": {},
    "source": [
     "  1. On all machines\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compact-jewelry",
+   "id": "attractive-planner",
    "metadata": {},
    "source": [
     "  2. on wikibase02\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appointed-qatar",
+   "id": "marked-continent",
    "metadata": {},
    "source": [
     "  3. on wikibase03\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chronic-fortune",
+   "id": "conscious-celebrity",
    "metadata": {},
    "source": [
     "  4. on wikibase04\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alike-banner",
+   "id": "tender-mongolia",
    "metadata": {},
    "source": [
     "  5. Check if all three nodes are up and form a cluster\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranking-dubai",
+   "id": "above-convert",
    "metadata": {},
    "source": [
     "  6. Create index with mapping file\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dedicated-gender",
+   "id": "bearing-houston",
    "metadata": {},
    "source": [
     "  7. Load data to elasticsearch index using table-linker docker\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuing-kingston",
+   "id": "medieval-sending",
    "metadata": {},
    "source": [
     "**NOTE**: The above step can take a long time. If running on a server, it is advisable to run the above command in a `tmux` or `screen` session."
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-paper",
+   "id": "organic-patrick",
    "metadata": {},
    "source": [
     " 8. Create Alias for Elasticsearch Index\n",
@@ -168,7 +168,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patent-slide",
+   "id": "pursuant-coffee",
+   "metadata": {},
+   "source": [
+    "9. Create a new index and switch the alias\n",
+    "\n",
+    "Suppose the current index is: `es-index-01` and we create a new index with more documents, `es-index-02`. Following curl command will switch the alias `es-index` from `es-index-01` to `es-index-02`.\n",
+    "\n",
+    "\n",
+    "```\n",
+    "curl -X POST \"localhost:9200/_aliases?pretty\" -H 'Content-Type: application/json' -d'\n",
+    "{\n",
+    "  \"actions\" : [\n",
+    "    { \"remove\" : { \"index\" : \"es-index-01\", \"alias\" : \"es-index\" } },\n",
+    "    { \"add\" : { \"index\" : \"es-index-02\", \"alias\" : \"es-index\" } }\n",
+    "  ]\n",
+    "}\n",
+    "'\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "expected-emergency",
    "metadata": {},
    "source": [
     "## Steps to build, setup and run the Wikifier Docker"
@@ -176,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooperative-render",
+   "id": "split-people",
    "metadata": {},
    "source": [
     " 1. Download the git repository\n",
@@ -214,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-airplane",
+   "id": "expensive-roller",
    "metadata": {},
    "source": [
     "# Call Wikidata Wikifier Service"
@@ -223,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "pursuant-matter",
+   "id": "scientific-liabilities",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "responsible-photograph",
+   "id": "hybrid-variety",
    "metadata": {},
    "source": [
     "## Setup parameters"
@@ -244,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dutch-occurrence",
+   "id": "supreme-norwegian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painted-oxford",
+   "id": "civic-content",
    "metadata": {},
    "source": [
     "## Peek at the input file"
@@ -264,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "mighty-giant",
+   "id": "spatial-gazette",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "artificial-possibility",
+   "id": "bronze-bleeding",
    "metadata": {},
    "source": [
     "## Call via Python"
@@ -427,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "comic-archives",
+   "id": "seeing-patient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rural-marketplace",
+   "id": "patient-anime",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dense-style",
+   "id": "numerical-memory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "convenient-restriction",
+   "id": "south-departure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interracial-increase",
+   "id": "major-upset",
    "metadata": {},
    "source": [
     "## Call using `curl`"
@@ -488,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "known-offset",
+   "id": "laden-crest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "killing-chambers",
+   "id": "mounted-therapy",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "distributed-estimate",
+   "id": "grave-pakistan",
    "metadata": {},
    "outputs": [],
    "source": []
