--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "romantic-vulnerability",
+   "id": "recent-sperm",
    "metadata": {},
    "source": [
     "# Wikifier Docker Runbook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valid-motor",
+   "id": "muslim-breathing",
    "metadata": {},
    "source": [
     "## Setup Elasticsearch cluster on machines wikibase02, wikibase03 and wikibase04"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contrary-november",
+   "id": "respective-referral",
    "metadata": {},
    "source": [
     "  1. On all machines\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-planner",
+   "id": "incoming-disney",
    "metadata": {},
    "source": [
     "  2. on wikibase02\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marked-continent",
+   "id": "signed-diagnosis",
    "metadata": {},
    "source": [
     "  3. on wikibase03\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conscious-celebrity",
+   "id": "finished-range",
    "metadata": {},
    "source": [
     "  4. on wikibase04\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tender-mongolia",
+   "id": "stupid-pollution",
    "metadata": {},
    "source": [
     "  5. Check if all three nodes are up and form a cluster\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "above-convert",
+   "id": "august-fruit",
    "metadata": {},
    "source": [
     "  6. Create index with mapping file\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bearing-houston",
+   "id": "united-latter",
    "metadata": {},
    "source": [
     "  7. Load data to elasticsearch index using table-linker docker\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-sending",
+   "id": "sacred-vampire",
    "metadata": {},
    "source": [
     "**NOTE**: The above step can take a long time. If running on a server, it is advisable to run the above command in a `tmux` or `screen` session."
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organic-patrick",
+   "id": "steady-journey",
    "metadata": {},
    "source": [
     " 8. Create Alias for Elasticsearch Index\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pursuant-coffee",
+   "id": "veterinary-foundation",
    "metadata": {},
    "source": [
     "9. Create a new index and switch the alias\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expected-emergency",
+   "id": "outer-master",
    "metadata": {},
    "source": [
     "## Steps to build, setup and run the Wikifier Docker"
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "split-people",
+   "id": "blessed-diameter",
    "metadata": {},
    "source": [
     " 1. Download the git repository\n",
@@ -222,6 +222,12 @@
     "docker build -t wikidata-wikifier .\n",
     "```\n",
     "\n",
+    "**NOTE: Rebuilding docker image, in case of updates**\n",
+    "\n",
+    "```\n",
+    "docker build -t wikidata-wikifer . --no-cache\n",
+    "```\n",
+    "\n",
     "\n",
     " 4. Setup environment variables in `docker-compose.yml`\n",
     "      - WIKIFIER_ES_URL # Elasticsearch URL, if ES is running on wikibase02, then set this parameter to http://wikibase02:9200\n",
@@ -237,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expensive-roller",
+   "id": "practical-forwarding",
    "metadata": {},
    "source": [
     "# Call Wikidata Wikifier Service"
@@ -246,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "scientific-liabilities",
+   "id": "different-transcript",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hybrid-variety",
+   "id": "final-valve",
    "metadata": {},
    "source": [
     "## Setup parameters"
@@ -267,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "supreme-norwegian",
+   "id": "white-timber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civic-content",
+   "id": "casual-fraction",
    "metadata": {},
    "source": [
     "## Peek at the input file"
@@ -287,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "spatial-gazette",
+   "id": "chronic-warren",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bronze-bleeding",
+   "id": "exceptional-spectrum",
    "metadata": {},
    "source": [
     "## Call via Python"
@@ -450,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "seeing-patient",
+   "id": "single-checklist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patient-anime",
+   "id": "turkish-laptop",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "numerical-memory",
+   "id": "great-gabriel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "south-departure",
+   "id": "constant-authentication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "major-upset",
+   "id": "serial-observation",
    "metadata": {},
    "source": [
     "## Call using `curl`"
@@ -511,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "laden-crest",
+   "id": "emerging-roads",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "mounted-therapy",
+   "id": "protective-skiing",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "grave-pakistan",
+   "id": "acceptable-battery",
    "metadata": {},
    "outputs": [],
    "source": []
