load es script parameterized

--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "recent-sperm",
+   "id": "spread-sudan",
    "metadata": {},
    "source": [
     "# Wikifier Docker Runbook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "muslim-breathing",
+   "id": "sound-honolulu",
    "metadata": {},
    "source": [
     "## Setup Elasticsearch cluster on machines wikibase02, wikibase03 and wikibase04"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respective-referral",
+   "id": "saved-accused",
    "metadata": {},
    "source": [
     "  1. On all machines\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-disney",
+   "id": "moderate-acceptance",
    "metadata": {},
    "source": [
     "  2. on wikibase02\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signed-diagnosis",
+   "id": "engaged-sailing",
    "metadata": {},
    "source": [
     "  3. on wikibase03\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finished-range",
+   "id": "silver-matter",
    "metadata": {},
    "source": [
     "  4. on wikibase04\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stupid-pollution",
+   "id": "exact-queen",
    "metadata": {},
    "source": [
     "  5. Check if all three nodes are up and form a cluster\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "august-fruit",
+   "id": "turkish-luxembourg",
    "metadata": {},
    "source": [
     "  6. Create index with mapping file\n",
@@ -119,21 +119,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "united-latter",
+   "id": "virgin-blackberry",
    "metadata": {},
    "source": [
     "  7. Load data to elasticsearch index using table-linker docker\n",
     "  \n",
-    "  The Dockerfile for table-linker: https://github.com/usc-isi-i2/table-linker/blob/master/Dockerfile\n",
+    "  \n",
+    "  Create a script load_es.sh in `LOCAL_PATH` by copying the following lines to the script:\n",
+    "  \n",
+    "```\n",
+    "es_url=$1\n",
+    "es_index=$2\n",
+    "files_path=$3\n",
+    "\n",
+    "for f in $files_path/* ;\n",
+    "do\n",
+    " tl load-elasticsearch-index --es-url $es_url --es-index $es_index --es-version 7 --kgtk-jl-path $f\n",
+    " sleep 60\n",
+    "done\n",
+    "\n",
+    "```\n",
+    "\n",
+    "The first parameter is the Elasticsearch URL\n",
+    "\n",
+    "Second parameter: Elasticsearch index name\n",
+    "\n",
+    "Third parameter: path to the folder with the files to be loaded into Elasticsearch.\n",
+    "  \n",
+    "The Dockerfile for table-linker: https://github.com/usc-isi-i2/table-linker/blob/master/Dockerfile\n",
     "\n",
     "```\n",
     "    git clone https://github.com/usc-isi-i2/table-linker\n",
     "    cd table-linker\n",
     "    docker build -t table-linker .\n",
-    "    docker run -it --rm -v <LOCAL_PATH>:/mnt/data   table-linker /bin/bash /mnt/data/load_es.sh\n",
+    "    docker run -it --rm -v <LOCAL_PATH>:/mnt/data   table-linker /bin/bash /mnt/data/load_es.sh \"http://localhost:9200\" \"wikidatadwd-augmented-02\" \"/mnt/data/es_split\"\n",
     "```\n",
     " \n",
-    "THE LOCAL_PATH is a path on local machine where load_es.sh and the data to be loaded should be present. In load_es.sh the --kgtk-jl-path should be changed to be the docker container path.\n",
+    "THE LOCAL_PATH is a path on local machine where load_es.sh and the data to be loaded should be present. In load_es.sh the --kgtk-jl-path should be the docker container path.\n",
     "\n",
     "The script path: `/pool/amandeep/wikidata-20210215-dwd/load_es.sh` (wikibase02).\n",
     "\n",
@@ -142,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sacred-vampire",
+   "id": "built-fisher",
    "metadata": {},
    "source": [
     "**NOTE**: The above step can take a long time. If running on a server, it is advisable to run the above command in a `tmux` or `screen` session."
@@ -150,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "steady-journey",
+   "id": "behavioral-stopping",
    "metadata": {},
    "source": [
     " 8. Create Alias for Elasticsearch Index\n",
@@ -168,20 +190,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "veterinary-foundation",
+   "id": "mysterious-representation",
    "metadata": {},
    "source": [
     "9. Create a new index and switch the alias\n",
     "\n",
-    "Suppose the current index is: `es-index-01` and we create a new index with more documents, `es-index-02`. Following curl command will switch the alias `es-index` from `es-index-01` to `es-index-02`.\n",
+    "Suppose the current index is: `wikidatadwd-augmented-01` and we create a new index with more documents, `wikidatadwd-augmented-02`. Following curl command will switch the alias `wikidatadwd-augmented` from `wikidatadwd-augmented-01` to `wikidatadwd-augmented-02`.\n",
     "\n",
     "\n",
     "```\n",
     "curl -X POST \"localhost:9200/_aliases?pretty\" -H 'Content-Type: application/json' -d'\n",
     "{\n",
     "  \"actions\" : [\n",
-    "    { \"remove\" : { \"index\" : \"es-index-01\", \"alias\" : \"es-index\" } },\n",
-    "    { \"add\" : { \"index\" : \"es-index-02\", \"alias\" : \"es-index\" } }\n",
+    "    { \"remove\" : { \"index\" : \"wikidatadwd-augmented-01\", \"alias\" : \"wikidatadwd-augmented\" } },\n",
+    "    { \"add\" : { \"index\" : \"wikidatadwd-augmented-02\", \"alias\" : \"wikidatadwd-augmented\" } }\n",
     "  ]\n",
     "}\n",
     "'\n",
@@ -191,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outer-master",
+   "id": "naked-wrong",
    "metadata": {},
    "source": [
     "## Steps to build, setup and run the Wikifier Docker"
@@ -199,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blessed-diameter",
+   "id": "indie-terry",
    "metadata": {},
    "source": [
     " 1. Download the git repository\n",
@@ -243,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "practical-forwarding",
+   "id": "deluxe-action",
    "metadata": {},
    "source": [
     "# Call Wikidata Wikifier Service"
@@ -252,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "different-transcript",
+   "id": "hybrid-paraguay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "final-valve",
+   "id": "potential-practitioner",
    "metadata": {},
    "source": [
     "## Setup parameters"
@@ -273,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "white-timber",
+   "id": "secondary-spencer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "casual-fraction",
+   "id": "piano-andrews",
    "metadata": {},
    "source": [
     "## Peek at the input file"
@@ -293,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "chronic-warren",
+   "id": "respiratory-german",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exceptional-spectrum",
+   "id": "premier-minister",
    "metadata": {},
    "source": [
     "## Call via Python"
@@ -456,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "single-checklist",
+   "id": "foster-findings",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "turkish-laptop",
+   "id": "duplicate-catalyst",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "great-gabriel",
+   "id": "informal-dream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "constant-authentication",
+   "id": "embedded-thousand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "serial-observation",
+   "id": "broad-archives",
    "metadata": {},
    "source": [
     "## Call using `curl`"
@@ -517,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "emerging-roads",
+   "id": "agreed-manual",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "protective-skiing",
+   "id": "decent-judges",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acceptable-battery",
+   "id": "virgin-square",
    "metadata": {},
    "outputs": [],
    "source": []
