run jupyter notebook via docker

--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -561,13 +561,75 @@
     }
    ],
    "source": [
-    "curl -XPOST -F \"file=@$input_file\"  $url"
+    "curl -XPOST -F \"file=@$input_file\"  \"$url\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "401bec2c-9892-485a-9730-97881cb8e1a4",
+   "metadata": {},
+   "source": [
+    "## Run table-linker commands in a jupyter notebook via Docker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "872c89d3-04ee-45cb-9885-c578627ff1f9",
+   "metadata": {},
+   "source": [
+    "Build the table-linker docker (if not already built)\n",
+    "\n",
+    "```\n",
+    "cd table-linker\n",
+    "docker build -t table-linker .\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc9d6f1e-3e58-42aa-b0d3-9bea93dd6fb6",
+   "metadata": {},
+   "source": [
+    "Run jupyter notebook\n",
+    "\n",
+    "Assuming `LOCAL_PATH` has the notebook to be run and the input file. Mount `LOCAL_PATH` to a folder `/out` in the docker container and run the following command\n",
+    "\n",
+    "```\n",
+    "docker run -it -v <LOCAL_PATH>:/out -p 8888:8888 table-linker:latest /bin/bash -c \"jupyter lab --ip='*' --port=8888 --no-browser --allow-root\"\n",
+    "```\n",
+    "\n",
+    "This will run the jupyter server and produce output like,\n",
+    "\n",
+    "```\n",
+    "[I 2021-07-19 17:13:15.687 LabApp] JupyterLab extension loaded from /usr/local/lib/python3.7/site-packages/jupyterlab\n",
+    "[I 2021-07-19 17:13:15.687 LabApp] JupyterLab application directory is /usr/local/share/jupyter/lab\n",
+    "[I 17:13:15.698 NotebookApp] Serving notebooks from local directory: /\n",
+    "[I 17:13:15.698 NotebookApp] Jupyter Notebook 6.4.0 is running at:\n",
+    "[I 17:13:15.699 NotebookApp] http://a16fa96774c1:8888/?token=2f25a3501853ff6e4177871f869fc9ed83029a42f5242677\n",
+    "[I 17:13:15.699 NotebookApp]  or http://127.0.0.1:8888/?token=2f25a3501853ff6e4177871f869fc9ed83029a42f5242677\n",
+    "[I 17:13:15.699 NotebookApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).\n",
+    "[C 17:13:15.706 NotebookApp]\n",
+    "\n",
+    "    To access the notebook, open this file in a browser:\n",
+    "        file:///root/.local/share/jupyter/runtime/nbserver-1-open.html\n",
+    "    Or copy and paste one of these URLs:\n",
+    "        http://a16fa96774c1:8888/?token=2f25a3501853ff6e4177871f869fc9ed83029a42f5242677\n",
+    "     or http://127.0.0.1:8888/?token=2f25a3501853ff6e4177871f869fc9ed83029a42f5242677\n",
+    "^C[I 17:46:25.704 NotebookApp] interrupted\n",
+    "Serving notebooks from local directory: /\n",
+    "0 active kernels\n",
+    "Jupyter Notebook 6.4.0 is running at:\n",
+    "http://a16fa96774c1:8888/?token=2f25a3501853ff6e4177871f869fc9ed83029a42f5242677\n",
+    " or http://127.0.0.1:8888/?token=2f25a3501853ff6e4177871f869fc9ed83029a42f5242677\n",
+    "```\n",
+    "\n",
+    "Copy paste the url `http://127.0.0.1:8888/?token=2f25a3501853ff6e4177871f869fc9ed83029a42f5242677` into the browser to access jupyter notebooks in the browser."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "virgin-square",
+   "id": "5479455f-887a-46a4-b876-ba9d793ac63a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -589,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
