update docker rebuild command

--- a/Call-Wikifier-Service.ipynb
+++ b/Call-Wikifier-Service.ipynb
@@ -247,7 +247,7 @@
     "**NOTE: Rebuilding docker image, in case of updates**\n",
     "\n",
     "```\n",
-    "docker build -t wikidata-wikifer . --no-cache\n",
+    "docker build -t wikidata-wikifier . --no-cache\n",
     "```\n",
     "\n",
     "\n",
